--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+Levenshtein==0.26.0
 pynput==1.7.7
 pyobjc-core==10.3.1
 pyobjc-framework-ApplicationServices==10.3.1
 pyobjc-framework-Cocoa==10.3.1
 pyobjc-framework-CoreText==10.3.1
 pyobjc-framework-Quartz==10.3.1
+RapidFuzz==3.10.0
 six==1.16.0
